--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <div class="header">
       <div class="title">
-        <p>Elephant presents</p>
-        <h1>California<span>Calling</span></h1>
-        <p>Dedicated to the communities affected by the 2018 wildfires.</p>
+        <p class="title-paragraph">Elephant presents</p>
+        <h1>California<span class="title-span">Calling</span></h1>
+        <p class="title-paragraph">Dedicated to the communities affected by the 2018 wildfires.</p>
       </div>
       <div class="header-features">
         <img src="assets/img/bear.svg" alt="" class="header-image">
@@ -25,6 +25,21 @@
           most destructive wildfires in California history.
         </p>
       </div>
+      <div class="main-secondarticle">
+
+      </div>
+      <div class="main-animations">
+        <div class="ticker">
+          <p class="animation-paragraph1">
+            JUNE 21, <span class="animation-span">2019</span>
+            JUNE 21, <span class="animation-span">2019</span>
+            JUNE 21, <span class="animation-span">2019</span>
+            JUNE 21, <span class="animation-span">2019</span>
+            JUNE 21, <span class="animation-span">2019</span>
+          </p>
+        </div>
+      </div>
+      <p>calling California</p>
     </div>
     <div class="footer">
 
